fixed footed covering mobile menu

--- a/css/nav.css
+++ b/css/nav.css
@@ -99,7 +99,7 @@
 {
 	position:fixed;
 	top: 49px;
-	z-index:10; 
+	z-index:10;
 	width:100%;
 	height: 100%;
 	font-weight:bold;
@@ -138,7 +138,7 @@
 
 #menu>ul>li
 {
-	height: calc(20% - 10px);
+	height: calc(20% - 14px);
 	padding:0;
 	margin: 0 -2px 0 -2px;
 }
